# pypa-test

./: README.md  setup.cfg
src/example_package/: example.py
