[metadata]
name = example-pkg-Jkula-second-package
version = 0.0.2
author = Latus Gom
author_email = latusgom@gmail.com
description = A small example package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Lazgom/pypa-test
project_urls =
    Bug Tracker = https://github.com/Lazgom/pypa-test/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src
